--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "event-registration-app",
   "version": "1.0.0",
-  "description": "A web application for event registration.",
+  "description": "Event Registration Application",
   "main": "src/js/server.js",
   "scripts": {
     "start": "node src/js/server.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
-    "csurf": "^1.11.0",
     "express": "^4.17.1",
-    "express-validator": "^6.10.0",
-    "figlet": "^1.5.2",
-    "redis": "^3.1.2"
+    "body-parser": "^1.19.0",
+    "redis": "^3.1.2",
+    "express-validator": "^6.6.1",
+    "csurf": "^1.11.0",
+    "cookie-parser": "^1.4.5",
+    "figlet": "^1.5.0",
+    "express-rate-limit": "^5.2.6"
   },
   "author": "Your Name",
   "license": "MIT"
